--- a/app/views/q_test/report.html.erb
+++ b/app/views/q_test/report.html.erb
@@ -2,7 +2,7 @@
 <script type="text/javascript">
     google.load("visualization", "1", {packages:["corechart"]});
 
-    google.setOnLoadCallback(drawChartOverall, drawChartCountUnit);
+    google.setOnLoadCallback(drawChartOverall);
     google.setOnLoadCallback(drawChartCountUnit);
 
     function drawChartOverall() {
