--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -313,6 +313,9 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .qmatrix-unit-cell-diagonal{ float: left; margin: 1px; width: 16px; height: 16px; border: 1px solid #e1e1e1; background-color: #f3f3f3; font-size: 10px; text-align: center; color: gray; }
 .qmatrix-unit-cell-number{ float: left; margin: 1px; width: 18px; height: 18px; text-align: center; font-size: 11px; color: gray; }
 .qmatrix-unit-cell-frequency{ float: left; margin: 1px; width: 16px; height: 16px; border: 1px solid #e6e5ef; background-color: #fbfaff; }
+.qmatrix-unit-cell-frequency-icon {}
+
+.q-matrix-result-chart { height: 350px; width: 900px; }
 
 
 .clear-both { clear: both; }
