--- a/app/views/q_matrix/tree.html.erb
+++ b/app/views/q_matrix/tree.html.erb
@@ -1,2 +1,3 @@
-<h1>QMatrix#tree</h1>
-<p>Find me in app/views/q_matrix/tree.html.erb</p>
+<h1>Дерево логических связей учебного элемента</h1>
+<p>Древовидная структура логических связей учебных элементов, необходимых для изучение выбранного.</p>
+<div id="q-matrix-tree-chart"></div>
