--- a/app/views/q_matrix/tree.html.erb
+++ b/app/views/q_matrix/tree.html.erb
@@ -1,3 +1,4 @@
 <h1>Дерево логических связей учебного элемента</h1>
 <p>Древовидная структура логических связей учебных элементов, необходимых для изучение выбранного.</p>
+<p><%= @matrix %></p>
 <div id="q-matrix-tree-chart"></div>
